# merkl-claiming

./: README.md
python/: .env.example  README.md  accounts_unset_operators.json  draft.py  get_unset_accounts.py  main.py  pyproject.toml
solidity/: SetOperator.s.sol  SetOperator.sol
